[package]
name = "rp2350-metro"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.7.0", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-rp = { version = "0.4.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xb",
    "binary-info",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-sdmmc = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
smart-leds = "0.3.0"
static_cell = "2.1"

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
